v3: fixes top of workflow comment getting cut off.

--- a/tool-ui/src/main/webapp/style/v3.less
+++ b/tool-ui/src/main/webapp/style/v3.less
@@ -458,8 +458,7 @@
   }
 
   .inputContainer {
-    margin-top: -2px;
-    margin-bottom: 3px;
+    margin-bottom: 0;
 
     .inputLabel {
       display: none;
